--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -3,6 +3,7 @@
     LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
     OnVisible: |+
         =Set(isLoading, true);
+        saveXml.DisplayMode.Disabled;
         
         Reset(nabavniNalogReadyForNavCheckbox);
         UpdateContext({scannedItem: Blank()});
@@ -146,7 +147,7 @@
                     Height: =155
                     Width: =Parent.Width
                     X: =0
-                    Y: =0
+                    Y: =1
                     ZIndex: =1
 
                     Container14 As groupContainer.manualLayoutContainer:
@@ -234,9 +235,10 @@
                     DisplayMode: =DisplayMode.Edit
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =Parent.Height
+                    Visible: =wizardStep = 1
                     Width: =Parent.Width
                     X: =0
-                    Y: =1
+                    Y: =2
                     ZIndex: =2
 
                     "NabavniNalogLines As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
@@ -430,6 +432,30 @@
                             Y: =9
                             ZIndex: =2
 
+                DataCard1 As dataCard.blankCard:
+                    BorderColor: =RGBA(0, 0, 0, 1)
+                    BorderStyle: =BorderStyle.Solid
+                    DisplayMode: =DisplayMode.Edit
+                    Fill: =RGBA(0, 0, 0, 0)
+                    Height: =14
+                    Width: =Parent.Width
+                    WidthFit: =false
+                    X: =0
+                    Y: =0
+                    ZIndex: =3
+
+                    Icon1 As icon.BackArrow:
+                        BorderColor: =RGBA(89, 0, 0, 1)
+                        Color: =RGBA(89, 0, 0, 1)
+                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                        DisabledColor: =RGBA(244, 244, 244, 1)
+                        Height: =25
+                        Icon: =Icon.ArrowLeft
+                        OnSelect: =Navigate(scrEntry,ScreenTransition.Fade);
+                        Width: =25
+                        X: =20
+                        ZIndex: =1
+
             PurchaseResEntryCanvas As fluidGrid.fluidGridWithBlankCard:
                 BorderThickness: =0
                 Height: =611
@@ -516,6 +542,23 @@
                             Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
                             ZIndex: =13
 
+                        DatePicker1 As datepicker:
+                            BorderColor: =RGBA(89, 0, 0, 1)
+                            CalendarHeaderFill: =RGBA(164, 38, 44, 1)
+                            Color: =RGBA(0, 0, 0, 1)
+                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            DisabledFill: =RGBA(244, 244, 244, 1)
+                            Height: =26
+                            HoverDateFill: =RGBA(222, 179, 184, 1)
+                            IconBackground: =RGBA(164, 38, 44, 1)
+                            OnSelect: =Select(Parent)
+                            SelectedDateFill: =RGBA(164, 38, 44, 1)
+                            Width: =158
+                            X: =148
+                            Y: =92
+                            ZIndex: =14
+
                         Group2_1 As group:
                             Height: =5
                             Width: =5
@@ -573,9 +616,9 @@
                                 PaddingTop: =0
                                 Size: =12
                                 Text: |-
-                                    ="Rok trajanja:    " & ThisItem.Exp_Date
+                                    ="Rok trajanja:    "
                                 VerticalAlign: =VerticalAlign.Top
-                                Width: =Title5_1.Width
+                                Width: =120
                                 X: =24
                                 Y: =97
                                 ZIndex: =8
@@ -596,7 +639,7 @@
                                 VerticalAlign: =VerticalAlign.Top
                                 Width: =Title5_1.Width
                                 X: =24
-                                Y: =132
+                                Y: =130
                                 ZIndex: =9
 
                             "NabavniNalogQty_1 As 'Text input'":
