--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -432,7 +432,7 @@
                             Y: =9
                             ZIndex: =2
 
-                DataCard1 As dataCard.blankCard:
+                PurchaseNav As dataCard.blankCard:
                     BorderColor: =RGBA(0, 0, 0, 1)
                     BorderStyle: =BorderStyle.Solid
                     DisplayMode: =DisplayMode.Edit
@@ -468,17 +468,17 @@
                     BorderStyle: =BorderStyle.Solid
                     DisplayMode: =DisplayMode.Edit
                     Fill: =RGBA(0, 0, 0, 0)
-                    Height: =871
+                    Height: =612
                     Width: =Parent.Width
                     X: =0
-                    Y: =0
+                    Y: =1
                     ZIndex: =2
 
                     "NabavniNalogResEntry As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                         BorderColor: =RGBA(89, 0, 0, 1)
                         DelayItemLoading: =true
                         Fill: =RGBA(237, 237, 237, 1)
-                        Height: =708
+                        Height: =560
                         Items: =Filter(colResEntries, NabavniNalogLines.Selected.Item_No = Item_No)
                         Layout: =Layout.Vertical
                         LoadingSpinner: =LoadingSpinner.Data
@@ -527,32 +527,12 @@
                             Width: =4
                             ZIndex: =6
 
-                        DatePickerExpDate As datepicker:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            CalendarHeaderFill: =RGBA(164, 38, 44, 1)
-                            Color: =RGBA(0, 0, 0, 1)
-                            DefaultDate: =ThisItem.Exp_Date
-                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                            DisabledColor: =RGBA(166, 166, 166, 1)
-                            DisabledFill: =RGBA(244, 244, 244, 1)
-                            Height: =26
-                            HoverDateFill: =RGBA(222, 179, 184, 1)
-                            IconBackground: =RGBA(164, 38, 44, 1)
-                            OnChange: |-
-                                =UpdateIf(colTempPurchaseResEntry, NabavniNalogResEntry.Selected.Item_No = ThisRecord.Item_No ,{Exp_Date: Value(DatePickerExpDate.SelectedDate)})
-                            OnSelect: =Select(Parent)
-                            SelectedDateFill: =RGBA(164, 38, 44, 1)
-                            Width: =158
-                            X: =148
-                            Y: =92
-                            ZIndex: =14
-
-                        Group2_1 As group:
+                        Group1 As group:
                             Height: =5
                             Width: =5
                             X: =40
                             Y: =40
-                            ZIndex: =14
+                            ZIndex: =16
 
                             Title5_1 As label:
                                 Color: =RGBA(50, 49, 48, 1)
@@ -654,40 +634,100 @@
                                 Y: =49
                                 ZIndex: =11
 
-                        "NabavniNalogLot As 'Text input'":
-                            Align: ='TextInputCanvas.Align'.Start
-                            Appearance: ="FilledDarker"
-                            BasePaletteColor: =
-                            BorderColor: =""
-                            BorderStyle: =""
-                            DelayOutput: =true
-                            DisabledBorderColor: =""
-                            DisplayMode: =DisplayMode.Edit
-                            Fill: =
-                            FocusedBorderColor: =""
-                            FontColor: =
-                            FontSize: =15
-                            Height: =31
-                            HoverBorderColor: =""
-                            OnChange: |-
-                                =UpdateIf(colTempPurchaseResEntry, NabavniNalogResEntry.Selected.Item_No = ThisRecord.Item_No ,{LOT_No: Value(NabavniNalogLot.Value)})
-                            PressedBorderColor: =""
-                            Value: =ThisItem.LOT_No
-                            Width: =113
-                            X: =80
-                            Y: =128
-                            ZIndex: =15
+                            DatePickerExpDate As datepicker:
+                                BorderColor: =RGBA(89, 0, 0, 1)
+                                CalendarHeaderFill: =RGBA(164, 38, 44, 1)
+                                Color: =RGBA(0, 0, 0, 1)
+                                DefaultDate: =ThisItem.Exp_Date
+                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                DisabledFill: =RGBA(244, 244, 244, 1)
+                                Height: =26
+                                HoverDateFill: =RGBA(222, 179, 184, 1)
+                                IconBackground: =RGBA(164, 38, 44, 1)
+                                OnChange: |-
+                                    =UpdateIf(colTempPurchaseResEntry, NabavniNalogResEntry.Selected.Item_No = ThisRecord.Item_No ,{Exp_Date: Value(DatePickerExpDate.SelectedDate)})
+                                OnSelect: =Select(Parent)
+                                SelectedDateFill: =RGBA(164, 38, 44, 1)
+                                Width: =158
+                                X: =148
+                                Y: =92
+                                ZIndex: =14
 
-                    Label2_1 As label:
+                            "NabavniNalogLot As 'Text input'":
+                                Align: ='TextInputCanvas.Align'.Start
+                                Appearance: ="FilledDarker"
+                                BasePaletteColor: =
+                                BorderColor: =""
+                                BorderStyle: =""
+                                DelayOutput: =true
+                                DisabledBorderColor: =""
+                                DisplayMode: =DisplayMode.Edit
+                                Fill: =
+                                FocusedBorderColor: =""
+                                FontColor: =
+                                FontSize: =15
+                                Height: =31
+                                HoverBorderColor: =""
+                                OnChange: |-
+                                    =UpdateIf(colTempPurchaseResEntry, NabavniNalogResEntry.Selected.Item_No = ThisRecord.Item_No ,{LOT_No: Value(NabavniNalogLot.Value)})
+                                PressedBorderColor: =""
+                                Value: =ThisItem.LOT_No
+                                Width: =113
+                                X: =80
+                                Y: =128
+                                ZIndex: =15
+
+                    Container2_1 As groupContainer.horizontalAutoLayoutContainer:
+                        DropShadow: =DropShadow.Light
+                        Height: =49
+                        LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
+                        LayoutMode: =LayoutMode.Auto
+                        PaddingRight: =20
+                        RadiusBottomLeft: =4
+                        RadiusBottomRight: =4
+                        RadiusTopLeft: =4
+                        RadiusTopRight: =4
+                        Width: =Max(App.Width, App.MinScreenWidth)
+                        ZIndex: =4
+
+                        Label2_2 As label:
+                            AlignInContainer: =AlignInContainer.Center
+                            BorderColor: =RGBA(89, 0, 0, 1)
+                            Color: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Height: =24
+                            PaddingLeft: =20
+                            Size: =12
+                            Text: ="Rezervacijski unosi"
+                            Width: |
+                                =200
+                            Y: =1
+                            ZIndex: =1
+
+                DataCard2 As dataCard.blankCard:
+                    BorderColor: =RGBA(0, 0, 0, 1)
+                    BorderStyle: =BorderStyle.Solid
+                    DisplayMode: =DisplayMode.Edit
+                    Fill: =RGBA(0, 0, 0, 0)
+                    Height: =25
+                    Width: =Parent.Width
+                    X: =20
+                    Y: =0
+                    ZIndex: =3
+
+                    Icon1_1 As icon.BackArrow:
                         BorderColor: =RGBA(89, 0, 0, 1)
-                        Color: =RGBA(0, 0, 0, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        Height: =24
-                        Size: =12
-                        Text: ="Rezervacijski unosi"
-                        Width: =Parent.Width
-                        Y: =10
-                        ZIndex: =3
+                        Color: =RGBA(89, 0, 0, 1)
+                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                        DisabledColor: =RGBA(244, 244, 244, 1)
+                        Height: =25
+                        Icon: =Icon.ArrowLeft
+                        OnSelect: |-
+                            =UpdateContext({wizardStep:1});
+                        Width: =25
+                        X: =20
+                        ZIndex: =1
 
         Spinner2_1 As Spinner:
             AlignInContainer: =AlignInContainer.Stretch
