--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -3,7 +3,6 @@
     LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
     OnVisible: |+
         =Set(isLoading, true);
-        saveXml.DisplayMode.Disabled;
         
         Reset(nabavniNalogReadyForNavCheckbox);
         UpdateContext({scannedItem: Blank()});
@@ -790,9 +789,7 @@
                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
-                DisplayMode: |-
-                    =//If(!IsBlank(purchase_header) || !IsBlank(purchase_line), DisplayMode.Edit, DisplayMode.Disabled)
-                    DisplayMode.Edit
+                DisplayMode: =If(!isLoading, DisplayMode.Edit, DisplayMode.Disabled)
                 Fill: =RGBA(164, 38, 44, 1)
                 FontWeight: =FontWeight.Semibold
                 Height: =30
