--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -864,7 +864,7 @@
                                         Quantity:Text(pl.Quantity),
                                         Type:Text(pl.Type),
                                         Unit_Of_Measure:Text(pl.Unit_Of_Measure),
-                                        Res_Entry: ForAll(Filter(colTempPurchaseResEntry, ThisRecord.Item_No = pl.Item_No),
+                                        Res_Entry: ForAll(Filter(colPurchaseResEntry, ThisRecord.Item_No = pl.Item_No),
                                             {
                                                 Created_By: Text(Created_By),
                                                 Creation_Date: Text(Creation_Date),
